--- a/LogIn.css
+++ b/LogIn.css
@@ -537,4 +537,174 @@ nav ul li a{
         right: 36%;
         display:block;
     }
+
+    .wrapper{
+        position: relative;
+        width: 300px;
+        height: 440px;
+        background: transparent;
+        border: 2px solid rgba(255, 255, 255, .5);
+        border-radius: 20px;
+        margin-top: -158%;
+        margin-left: 11%;
+        backdrop-filter: blur(20px);
+        box-shadow: 0 0 30px rgba(172, 148, 16, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        transform: scale(0);
+        transition: transform .5s ease, height .2s ease;
+    }
+    
+    .wrapper.active-popup{
+        transform: scale(1);
+    }
+    
+    .wrapper.active{
+        height: 520px;
+    }
+    .wrapper .form-box{
+        width: 100%;
+        padding: 40px;
+    }
+    
+    .wrapper .form-box.login{
+       transition: transform .18s ease;
+       transform: translateX(0);
+    }
+    
+    .wrapper.active .form-box.login{
+        transition: none;
+        transform: translateX(-400px);
+    }
+    .wrapper .form-box.register{
+        position: absolute;
+        transition: none;
+        transform: translateX(400px);
+    }
+    
+    .wrapper.active .form-box.register{
+        transition: transform .18s ease;
+        transform: translateX(0);
+    }
+    
+    .wrapper .icon-close{
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 35px;
+        height: 35px;
+        font-size: 2em;
+        color: hsl(41, 94%, 21%);
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        z-index: 1;
+    }
+    
+    .form-box h2{
+        font-size: 3em;
+        color: hsl(39, 89%, 39%);
+        text-align: center;
+    }
+    
+    .input-box{
+        position: relative;
+        width: 100%;
+        height: 50px;
+        border-bottom: 2px solid hsl(41, 94%, 21%);
+        margin: 30px 0;
+    }
+    
+    .input-box label{
+        position: absolute;
+        top: 50%;
+        left: 5px;
+        transform: translateY(-50%);
+        font-size: 1em;
+        color: hsl(39, 89%, 39%);
+        font-weight: 500;
+        pointer-events: none;
+        transition: 0.5s;
+    }
+    
+    .input-box input:focus~label,
+    .input-box input:valid~label{
+        top: -5px;
+    }
+    
+    .input-box input{
+        width: 100%;
+        height: 100%;
+        background: transparent;
+        border: none;
+        outline: none;
+        font-size: 1em;
+        color: hsl(39, 89%, 39%);
+        font-weight: 600;
+        padding: 0 35px 0 5px;
+    }
+    
+    .input-box .icon{
+        position: absolute;
+        right: 8px;
+        font-size: 1.2em;
+        color: hsl(39, 89%, 39%);
+        line-height: 57px;
+    }
+    
+    .remember-forgot{
+        font-size: .9em;
+        color: hsl(39, 89%, 39%);
+        font-weight: 500;
+        margin: -15px 0 15px;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .remember-forgot label input{
+        accent-color: hsl(39, 89%, 39%);
+        margin-right: 3px;
+    }
+    
+    .remember-forgot a{
+        color: hsl(39, 89%, 39%);
+        text-decoration: none;
+    }
+    
+    .remember-forgot a:hover{
+        text-decoration: underline;
+    }
+    
+    .btn-submit{
+        width: 100%;
+        height: 45px;
+        background: hsl(39, 89%, 39%);
+        border: none;
+        outline: none;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 1em;
+        color: white;
+        font-weight: 500;
+    }
+    
+    .login-register{
+        font-size: .9em;
+        color: hsl(39, 89%, 39%);
+        text-align: center;
+        font-weight: 500;
+        margin: 25px 0 10px;
+    }
+    
+    .login-register p a{
+        color: hsl(39, 89%, 39%);
+        text-decoration: none;
+        font-weight: 600;
+    }
+    
+    .login-register p a:hover{
+        text-decoration: underline;
+    }
 }
