--- a/LogIn.css
+++ b/LogIn.css
@@ -1,294 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', 'sans-serif';
-}
-
-.hero{
-    width: 100%;
-    min-height: 100vh;
-    background-image: url(images/smokebackground.jpg);
-    background-position: center;
-    background-size: cover;
-    padding: 10px 10%;
-    overflow: hidden;
-    position: relative;
-}
-
-nav{
-    padding: 10px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.logo{
-    width: 145px;
-    margin-left: -5%;
-}
-
-nav ul li{
-    display: inline-block;
-    list-style: none;
-    margin: 10px 15px;
-}
-
-nav ul li a{
-    text-decoration: none;
-    color: #ffffff;
-    font-weight:bold;
-}
-
-.btn{
-    display: inline-block;
-    text-decoration: none;
-    padding: 14px 40px;
-    color: #fff;
-    background-image: linear-gradient(45deg, #0c0b0c, rgba(241, 199, 13, 0.827));
-    font-size: 14px;
-    border-radius: 30px;
-    border-top-right-radius: 0;
-    transition:0.5s;
-}
-
-.content{
-    margin-top: 10%;
-    margin-left: -5%;
-    max-width: 600px;
-}
-
-.content h1{
-    font-size: 70px;
-    color:#ffffff;
-}
-
-.content p{
-    margin: 10px 0 30px;
-    color: #ffffff;
-    animation-delay: 0.5s;
-}
-
-.content .btn{
-    padding: 15px 80px;
-    font-size: 16px;
-    animation-delay: 1s;
-}
-
-.btn:hover{
-    border-top-right-radius: 30px;
-    color:#222;
-}
-
-.feature-img1{
-    width: 530px;
-    position: absolute;
-    bottom: 0;
-    right: 0%;
-}
-
-.feature-img2{
-    width: 530px;
-    position: absolute;
-    bottom: 0;
-    right: 14%;
-}
-
-.feature-img3{
-    width: 530px;
-    position: absolute;
-    bottom: 0;
-    right: 36%;
-}
-
-.feature-img1.anim{
-    animation-delay: 1.5s;
-}
-
-.feature-img2.anim{
-    animation-delay: 1.5s;
-}
-
-.feature-img3.anim{
-    animation-delay: 1.5s;
-}
-
-.anim{
-    opacity: 0;
-    transform: translateY(30px);
-    animation: moveup 0.5s linear forwards;
-}
-
-.wrapper{
-    position: relative;
-    width: 400px;
-    height: 440px;
-    background: transparent;
-    border: 2px solid rgba(255, 255, 255, .5);
-    border-radius: 20px;
-    margin-top: -38%;
-    margin-left: 38%;
-    backdrop-filter: blur(20px);
-    box-shadow: 0 0 30px rgba(172, 148, 16, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    transform: scale(0);
-    transition: transform .5s ease, height .2s ease;
-}
-
-.wrapper.active-popup{
-    transform: scale(1);
-}
-
-.wrapper.active{
-    height: 520px;
-}
-.wrapper .form-box{
-    width: 100%;
-    padding: 40px;
-}
-
-.wrapper .form-box.login{
-   transition: transform .18s ease;
-   transform: translateX(0);
-}
-
-.wrapper.active .form-box.login{
-    transition: none;
-    transform: translateX(-400px);
-}
-.wrapper .form-box.register{
-    position: absolute;
-    transition: none;
-    transform: translateX(400px);
-}
-
-.wrapper.active .form-box.register{
-    transition: transform .18s ease;
-    transform: translateX(0);
-}
-
-.wrapper .icon-close{
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 35px;
-    height: 35px;
-    font-size: 2em;
-    color: hsl(41, 94%, 21%);
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    z-index: 1;
-}
-
-.form-box h2{
-    font-size: 2em;
-    color: hsl(39, 89%, 39%);
-    text-align: center;
-}
-
-.input-box{
-    position: relative;
-    width: 100%;
-    height: 50px;
-    border-bottom: 2px solid hsl(41, 94%, 21%);
-    margin: 30px 0;
-}
-
-.input-box label{
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    transform: translateY(-50%);
-    font-size: 1em;
-    color: hsl(39, 89%, 39%);
-    font-weight: 500;
-    pointer-events: none;
-    transition: 0.5s;
-}
-
-.input-box input:focus~label,
-.input-box input:valid~label{
-    top: -5px;
-}
-
-.input-box input{
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
-    font-size: 1em;
-    color: hsl(39, 89%, 39%);
-    font-weight: 600;
-    padding: 0 35px 0 5px;
-}
-
-.input-box .icon{
-    position: absolute;
-    right: 8px;
-    font-size: 1.2em;
-    color: hsl(39, 89%, 39%);
-    line-height: 57px;
-}
-
-.remember-forgot{
-    font-size: .9em;
-    color: hsl(39, 89%, 39%);
-    font-weight: 500;
-    margin: -15px 0 15px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.remember-forgot label input{
-    accent-color: hsl(39, 89%, 39%);
-    margin-right: 3px;
-}
-
-.remember-forgot a{
-    color: hsl(39, 89%, 39%);
-    text-decoration: none;
-}
-
-.remember-forgot a:hover{
-    text-decoration: underline;
-}
-
-.btn-submit{
-    width: 100%;
-    height: 45px;
-    background: hsl(39, 89%, 39%);
-    border: none;
-    outline: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-size: 1em;
-    color: white;
-    font-weight: 500;
-}
-
-.login-register{
-    font-size: .9em;
-    color: hsl(39, 89%, 39%);
-    text-align: center;
-    font-weight: 500;
-    margin: 25px 0 10px;
-}
-
-.login-register p a{
-    color: hsl(39, 89%, 39%);
-    text-decoration: none;
-    font-weight: 600;
-}
-
-.login-register p a:hover{
-    text-decoration: underline;
-}
-
 @keyframes moveup{
     100%{
         opacity: 1;
@@ -605,6 +314,299 @@ nav ul li a{
     
     .form-box h2{
         font-size: 3em;
+        color: hsl(39, 89%, 39%);
+        text-align: center;
+    }
+    
+    .input-box{
+        position: relative;
+        width: 100%;
+        height: 50px;
+        border-bottom: 2px solid hsl(41, 94%, 21%);
+        margin: 30px 0;
+    }
+    
+    .input-box label{
+        position: absolute;
+        top: 50%;
+        left: 5px;
+        transform: translateY(-50%);
+        font-size: 1em;
+        color: hsl(39, 89%, 39%);
+        font-weight: 500;
+        pointer-events: none;
+        transition: 0.5s;
+    }
+    
+    .input-box input:focus~label,
+    .input-box input:valid~label{
+        top: -5px;
+    }
+    
+    .input-box input{
+        width: 100%;
+        height: 100%;
+        background: transparent;
+        border: none;
+        outline: none;
+        font-size: 1em;
+        color: hsl(39, 89%, 39%);
+        font-weight: 600;
+        padding: 0 35px 0 5px;
+    }
+    
+    .input-box .icon{
+        position: absolute;
+        right: 8px;
+        font-size: 1.2em;
+        color: hsl(39, 89%, 39%);
+        line-height: 57px;
+    }
+    
+    .remember-forgot{
+        font-size: .9em;
+        color: hsl(39, 89%, 39%);
+        font-weight: 500;
+        margin: -15px 0 15px;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .remember-forgot label input{
+        accent-color: hsl(39, 89%, 39%);
+        margin-right: 3px;
+    }
+    
+    .remember-forgot a{
+        color: hsl(39, 89%, 39%);
+        text-decoration: none;
+    }
+    
+    .remember-forgot a:hover{
+        text-decoration: underline;
+    }
+    
+    .btn-submit{
+        width: 100%;
+        height: 45px;
+        background: hsl(39, 89%, 39%);
+        border: none;
+        outline: none;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 1em;
+        color: white;
+        font-weight: 500;
+    }
+    
+    .login-register{
+        font-size: .9em;
+        color: hsl(39, 89%, 39%);
+        text-align: center;
+        font-weight: 500;
+        margin: 25px 0 10px;
+    }
+    
+    .login-register p a{
+        color: hsl(39, 89%, 39%);
+        text-decoration: none;
+        font-weight: 600;
+    }
+    
+    .login-register p a:hover{
+        text-decoration: underline;
+    }
+}
+
+@media only screen and (min-width: 1000px){
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Poppins', 'sans-serif';
+    }
+    
+    .hero{
+        width: 100%;
+        min-height: 100vh;
+        background-image: url(images/smokebackground.jpg);
+        background-position: center;
+        background-size: cover;
+        padding: 10px 10%;
+        overflow: hidden;
+        position: relative;
+    }
+    
+    nav{
+        padding: 10px 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    .logo{
+        width: 145px;
+        margin-left: -5%;
+    }
+    
+    nav ul li{
+        display: inline-block;
+        list-style: none;
+        margin: 10px 15px;
+    }
+    
+    nav ul li a{
+        text-decoration: none;
+        color: #ffffff;
+        font-weight:bold;
+    }
+    
+    .btn{
+        display: inline-block;
+        text-decoration: none;
+        padding: 14px 40px;
+        color: #fff;
+        background-image: linear-gradient(45deg, #0c0b0c, rgba(241, 199, 13, 0.827));
+        font-size: 14px;
+        border-radius: 30px;
+        border-top-right-radius: 0;
+        transition:0.5s;
+    }
+    
+    .content{
+        margin-top: 10%;
+        margin-left: -5%;
+        max-width: 600px;
+    }
+    
+    .content h1{
+        font-size: 70px;
+        color:#ffffff;
+    }
+    
+    .content p{
+        margin: 10px 0 30px;
+        color: #ffffff;
+        animation-delay: 0.5s;
+    }
+    
+    .content .btn{
+        padding: 15px 80px;
+        font-size: 16px;
+        animation-delay: 1s;
+    }
+    
+    .btn:hover{
+        border-top-right-radius: 30px;
+        color:#222;
+    }
+    
+    .feature-img1{
+        width: 530px;
+        position: absolute;
+        bottom: 0;
+        right: 0%;
+    }
+    
+    .feature-img2{
+        width: 530px;
+        position: absolute;
+        bottom: 0;
+        right: 14%;
+    }
+    
+    .feature-img3{
+        width: 530px;
+        position: absolute;
+        bottom: 0;
+        right: 36%;
+    }
+    
+    .feature-img1.anim{
+        animation-delay: 1.5s;
+    }
+    
+    .feature-img2.anim{
+        animation-delay: 1.5s;
+    }
+    
+    .feature-img3.anim{
+        animation-delay: 1.5s;
+    }
+    
+    .anim{
+        opacity: 0;
+        transform: translateY(30px);
+        animation: moveup 0.5s linear forwards;
+    }
+    
+    .wrapper{
+        position: relative;
+        width: 400px;
+        height: 440px;
+        background: transparent;
+        border: 2px solid rgba(255, 255, 255, .5);
+        border-radius: 20px;
+        margin-top: -38%;
+        margin-left: 38%;
+        backdrop-filter: blur(20px);
+        box-shadow: 0 0 30px rgba(172, 148, 16, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        transform: scale(0);
+        transition: transform .5s ease, height .2s ease;
+    }
+    
+    .wrapper.active-popup{
+        transform: scale(1);
+    }
+    
+    .wrapper.active{
+        height: 520px;
+    }
+    .wrapper .form-box{
+        width: 100%;
+        padding: 40px;
+    }
+    
+    .wrapper .form-box.login{
+       transition: transform .18s ease;
+       transform: translateX(0);
+    }
+    
+    .wrapper.active .form-box.login{
+        transition: none;
+        transform: translateX(-400px);
+    }
+    .wrapper .form-box.register{
+        position: absolute;
+        transition: none;
+        transform: translateX(400px);
+    }
+    
+    .wrapper.active .form-box.register{
+        transition: transform .18s ease;
+        transform: translateX(0);
+    }
+    
+    .wrapper .icon-close{
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 35px;
+        height: 35px;
+        font-size: 2em;
+        color: hsl(41, 94%, 21%);
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        z-index: 1;
+    }
+    
+    .form-box h2{
+        font-size: 2em;
         color: hsl(39, 89%, 39%);
         text-align: center;
     }
