--- a/LogIn.css
+++ b/LogIn.css
@@ -299,6 +299,17 @@ nav ul li a{
 }
 
 @media only screen and (min-width: 768px){
+    .hero{
+        width: 100%;
+        min-height: 100vh;
+        background-image: url(images/smokebackground.jpg);
+        background-position: center;
+        background-size: cover;
+        padding: 10px 10%;
+        overflow: hidden;
+        position: relative;
+    }
+    
     .feature-img1{
         width: 330px;
         position: absolute;
